	 spelling/formatting fixes (Stuart).
20070608 configure.in,Makefile.am,tape2wav.c,man/{tape2wav.1,audio2tape.1},
         audio2tape.c: add simple tape image to wav file convertor (Fred).
20070608 man/*.1: fix dashes (Stuart).
20070608 audio2tape.c,man/{audio2tape.1,tape2wav.1},tape2wav.c: update FSF
	 address (Stuart).
20070611 man/fuse-utils.1: mention tape2wav (Stuart).
20070611 .: ignore tape2wav.
20070727 listbasic.c,rzxcheck.c,rzxdump.c,rzxtool.c,snap2tzx.c,snapconv.c,
         tape2wav.c,tapeconv.c,tzxlist.c,utils.[ch]: remove use of mmap():
	 added complexity for no real benefit.
20071005 listbasic.c: fix handling of block characters (Stuart).
20071007 Makefile.am,man/rzxtool.1,rzxtool.c: complete rewrite of rzxtool
	 to make it useful with the new RZX model of allowing multiple
	 snapshots in an RZX file.
20071007 listbasic.c: add Beta BASIC support to listbasic (Stuart).
20071007 listbasic.c: improve handling of spaces in Beta BASIC (Stuart).
20071026 ChangeLog: add some entries (Stuart).
20071128 Makefile.am,man/{Makefile.am,fuse-utils.1,profile2map.1},
	 profile2map.c: add profile2map utility for converting Fuse profiler
	 output to Z80-style map format (feature request #1530348) (Stuart).
20071218 ChangeLog,README,configure.in,man/{audio2tape.1,createhdf.1,
	 fuse-utils.1,listbasic.1,profile2map.1,raw2hdf.1,rzxcheck.1,rzxdump.1,
	 rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,tape2wav.1,tapeconv.1,
	 tzxlist.1}: update for 0.9.0 release (Stuart).
20071218 rzxtool.c: fix warning (Stuart).
20071218 audio2tape.c,listbasic.c,rzxcheck.c,rzxdump.c,snap2tzx.c,snapconv.c,
	 tape2wav.c,tapeconv.c,tzxlist.c,utils.c: don't include mman.h (Stuart).
20071219 rzxtool.c: fix build without glib (Stuart).
20071219 Makefile.am,configure.in: fix build on Win32 with libaudiofile and/or
	 libgcrypt (Stuart).
20071219 rzxtool.c: #include <string.h> (Stuart).
20071219 compat.h: define S_I[RW]{GRP,OTH} to 0 if they're unavailable (Stuart).