@@ -211,3 +211,4 @@
 	 libgcrypt (Stuart).
 20071219 rzxtool.c: #include <string.h> (Stuart).
 20071219 compat.h: define S_I[RW]{GRP,OTH} to 0 if they're unavailable (Stuart).
+20071219 utils.c: don't try to use uname() on Win32 (Stuart).
